Updated project with latest changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Header Section -->
     <header>
       <div class="container">
-        <h1 class="translate" data-key="welcome">Welcome to Nexus Tech</h1>
+        <h1 class="translate" data-key="welcome">Welcome to Nexus Tech Viet Nam</h1>
         <p class="translate" data-key="slogan">Innovate the Future</p>
         <a href="#services" class="btn translate" data-key="explore">Explore More</a>
       </div>
@@ -94,7 +94,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <p class="translate" data-key="footer">&copy; 2024 Nexus Tech. All rights reserved.</p>
+        <p class="translate" data-key="footer">&copy; 2024 Nexus Tech Viet Nam. All rights reserved.</p>
         <ul class="footer-nav">
           <li><a href="#home" class="translate" data-key="home">Home</a></li>
           <li><a href="#services" class="translate" data-key="services">Services</a></li>
