Updated project with latest changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nexus Tech</title>
+  <title>NexusTech Viet Nam</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
     <!-- Header Section -->
     <header>
       <div class="container">
-        <h1 class="translate" data-key="welcome">Welcome to Nexus Tech Viet Nam</h1>
+        <h1 class="translate" data-key="welcome">Welcome to NexusTech Viet Nam</h1>
         <p class="translate" data-key="slogan">Innovate the Future</p>
         <a href="#services" class="btn translate" data-key="explore">Explore More</a>
       </div>
