Updated project with latest changes services

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <div class="services-grid">
           <div class="service-item">
             <img src="https://via.placeholder.com/80" alt="Service 1">
-            <h3 class="translate" data-key="service1-title">Web Development</h3>
-            <p class="translate" data-key="service1-description">Create modern, responsive websites for your business.</p>
+            <h3 class="translate" data-key="service1-title">Software Development</h3>
+            <p class="translate" data-key="service1-description">Build innovative and scalable software, web, and mobile applications tailored to your business needs.</p>
           </div>
           <div class="service-item">
             <img src="https://via.placeholder.com/80" alt="Service 2">
-            <h3 class="translate" data-key="service2-title">App Development</h3>
-            <p class="translate" data-key="service2-description">Build fast, scalable mobile apps for iOS and Android.</p>
+            <h3 class="translate" data-key="service2-title">Chatbot Development</h3>
+            <p class="translate" data-key="service2-description">Enhance customer engagement with smart, AI-driven chatbots designed for seamless interactions and automation.</p>
           </div>
           <div class="service-item">
             <img src="https://via.placeholder.com/80" alt="Service 3">
