Added services's images

--- a/index.html
+++ b/index.html
@@ -61,18 +61,21 @@
       <div class="container">
         <h2 class="translate" data-key="services-title">Our Services</h2>
         <div class="services-grid">
+          <!-- Service 1 -->
           <div class="service-item">
-            <img src="https://via.placeholder.com/80" alt="Service 1">
+            <img src="images/software-development.png" alt="Software Development">
             <h3 class="translate" data-key="service1-title">Software Development</h3>
             <p class="translate" data-key="service1-description">Build innovative and scalable software, web, and mobile applications tailored to your business needs.</p>
           </div>
+          <!-- Service 2 -->
           <div class="service-item">
-            <img src="https://via.placeholder.com/80" alt="Service 2">
+            <img src="images/chatbot-development.png" alt="Chatbot Development">
             <h3 class="translate" data-key="service2-title">Chatbot Development</h3>
             <p class="translate" data-key="service2-description">Enhance customer engagement with smart, AI-driven chatbots designed for seamless interactions and automation.</p>
           </div>
+          <!-- Service 3 -->
           <div class="service-item">
-            <img src="https://via.placeholder.com/80" alt="Service 3">
+            <img src="images/ai-solutions.png" alt="AI Solutions for Businesses">
             <h3 class="translate" data-key="service3-title">AI Solutions for Businesses</h3>
             <p class="translate" data-key="service3-description">Streamline business operations with AI-driven solutions designed to enhance efficiency and decision-making.</p>
           </div>
