--- a/index.html
+++ b/index.html
@@ -87,16 +87,30 @@
     <section id="contact">
       <div class="container">
         <h2 class="translate" data-key="contact">Contact Us</h2>
-        <!-- Embedded Google Form -->
-        <iframe 
-          src="https://docs.google.com/forms/d/e/1FAIpQLSeMLisMhTQ9ZNmKxqkvwWXecAwS1M_6YdjfMVTLbd3E_Ntl-g/viewform?embedded=true" 
-          width="100%" 
-          height="824" 
-          frameborder="0" 
-          marginheight="0" 
-          marginwidth="0">
-            Loading…
-        </iframe>
+        <form action="https://docs.google.com/forms/d/e/1FAIpQLSeMLisMhTQ9ZNmKxqkvwWXecAwS1M_6YdjfMVTLbd3E_Ntl-g/formResponse" method="POST" target="_blank" class="custom-contact-form">
+          <input 
+            type="text" 
+            name="entry.123456789" 
+            placeholder="Your Name" 
+            class="translate" 
+            data-key="contact-name" 
+            required>
+          <input 
+            type="email" 
+            name="entry.987654321" 
+            placeholder="Your Email" 
+            class="translate" 
+            data-key="contact-email" 
+            required>
+          <textarea 
+            name="entry.1112131415" 
+            placeholder="Your Message" 
+            class="translate" 
+            data-key="contact-message" 
+            rows="5" 
+            required></textarea>
+          <button type="submit" class="translate" data-key="contact-submit">Send Message</button>
+        </form>
       </div>
     </section>
 
